# Dyse-Robotics

./: .gitignore  .gitmodules  Dyse-Robotics-config.txt  LICENSE  PARAMS[CONFIG]  PARAMS[ENV_NAME]  PARAMS[ENV_PATH]  PARAMS[GIT_EXT]  PARAMS[PROJECT_NAME]  README.md  builder.bash  dyse.bash  nvidia-model.py  python3_requirements.txt  python3_requirments.txt  setup.bash  setup_template.bash  space_carving_dev.py  tape-finder.py  test_setup.bash
Arduino/: Drive_Motor_Control.ino  IRRL.h  RGB-LED.ino  circuits-prac.ino
Arman/: AnglePrediction.py
Dyse_env/Dyse_env/: setup.bash
MachineLearning/: AnglePrediction.py  Control.py  SimpleArm.py  TestBook.ipynb
Navigator/: image_processor.py  nvidia-model.py  proto-drive.ino  segmentation.py  spitest.py  tape-finder.py
Projects/: Rofous.md
Projects/Arduino/: Dist-intro.ino  Servo-intro.ino  circuits-prac-photoresister.ino  i2c-test.ino
Projects/Arman/: .gitmodules  python3_requirements.txt  setup.bash  setup_template.bash
Projects/Navigator/: img-collect.py  lane2line.py  motor.h
Resources/: ReadMe.md
_/: _.ino
config/: Arman.yaml  Dyse-Robotics-config.txt  arman.yaml  arman_install.yaml  dependencies.txt  python3_requirements.txt  rufous.yaml  rufous_install.yaml  rufous_live.yaml  rufous_python3_requirements.txt
dev/: Analytic-Solver.ipynb  Control-Dev.ipynb  Hermes.ipynb  Kalman.ipynb  PID.ipynb
dyse_tools/: Analytic_Solver.py  PID.py  Transformer.py
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/dyse-robots/arman/: CMakeLists.txt  README.md  package.xml
src/dysepy/: dyse
(+241 files in other folders)
